--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -7,4 +7,5 @@ $dark-light: #bdc3c7;
 $outfit-card-color: #23211F;
 $icon-btn-color-dark: #40403F;
 $icon-btn-color-light: #949494;
+$rgbacolor: rgba(255, 255, 255, 0.7);
 $font-stack: 'Roboto';
