--- a/scss/responsive/_desktop_xl.scss
+++ b/scss/responsive/_desktop_xl.scss
@@ -19,6 +19,10 @@
         .main-content {
             margin-left: 120px;
             // border: 1px solid green;
+
+            #card-mobile {
+                display:  none;
+            } 
         }
     }
 }
@@ -35,6 +39,7 @@
 
     .side-menu {
         ul {
+            margin-top: 55px;
             li {
                 padding: .4rem 1.4rem;
 
@@ -54,7 +59,213 @@
     main {
         .main-content {
             margin-left: 120px;
-            // border: 1px solid green;
+
+            #card-mobile {
+                display:  none;
+            }
+
+            .card.card-desktop {
+                // border: 1px solid red;
+                margin-top: 54px;
+                padding:.8rem 2rem .8rem 1rem;
+
+                // Left side
+                .card-left {
+                    display: inline-flex;
+                    justify-content: space-around;
+                    padding: 0rem 0rem;
+                    // border: 1px solid green;
+
+                    &__brand {
+                        // border: 1px solid cyan;
+
+                        span {
+                            font-weight: 400;
+                            font-size: large;
+                            color: $white;
+                            letter-spacing: .5pt;
+                        }
+                    }
+
+                    &__search {
+                        // border: 1px solid olivedrab;
+                        margin-left: 60px;
+
+                        form {
+                            position: relative;
+                            display: flex;
+                            transition: all 0.5s ease-in;
+
+                            .search__icon {
+                                position: absolute;
+                                top: 8px;
+                                left: 8px;
+                                width: 5px;
+                                color: $icon-btn-color-dark;
+                            }
+                            
+
+                            input[type=text] {
+                                background: #1f1f1e;
+                                border: none;
+                                outline: none;
+                                border-radius: 5px;
+                                padding: .4rem .4rem .4rem 2rem;
+                                color: $icon-btn-color-light;
+                                font-size: .8rem;
+                                width: 16rem;
+                                box-shadow: 
+                                    inset 0px 11px 8px -10px rgb(32, 32, 32),
+                                    inset 0px -11px 8px -10px rgb(32, 32, 32);
+
+                            }
+                        }
+                            
+                    }
+
+                    &__dropdown {
+                        // border: 1px solid yellowgreen;
+                        width: 7rem;
+                        margin-left: 60px;
+
+                        &-btn {
+                            display: flex;
+                            justify-content: space-between;
+                            padding: .4rem .4rem .4rem 2.5rem;
+                            font-size: .8rem;
+                            cursor: pointer;
+                            background-color: #1f1f1e;
+                            border-radius: 8px;
+                            box-shadow: 3px 3px 30px rgba(118, 96, 168, 0.2);
+                            transition: transform 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
+
+                            p {
+                                display: inline;
+                                color: $white;
+                            }
+
+                            i {
+                                color: $primary;
+                            }
+                        }
+
+                        &-btn:hover {
+                            transform: translateY(1px);
+                            box-shadow: 3px 3px 30px rgba(118, 96, 168, 0.17);
+
+                            .arrow {
+                                transition: transform 0.3s ease;
+                            }
+
+                            .arrow.open {
+                                transform: rotate(180deg);
+                            }
+                        }
+
+                        .dropdown-items {
+                            position: relative;
+                            margin-top: 2px;
+                            min-width: 50px;
+                            font-size: .8rem;
+                            background-color: #1f1f1e;
+                            padding-top: 10px;
+                            padding-bottom: 10px;
+                            border-radius: 10px;
+                            display: block;
+                            cursor: pointer;
+                            transform: scale(0.01);
+                            opacity: 0;
+                            transition: transform 0.3s ease, opacity 0.3s ease, box-shadow 0.3s ease 0.15s;
+                            transform-origin: center top;
+                            overflow: hidden;
+                            z-index: 1;
+
+                            .drop-divider {
+                                border-top: 1px solid #181715;
+                                margin: 0rem .5rem 0rem .5rem;
+                            }
+
+                            &.open {
+                                transform: scale(1);
+                                opacity: 1;
+                                box-shadow: 3px 3px 30px rgba(118, 96, 168, 0.15);
+                            }
+
+                            & a {
+                                position: relative;
+                                display: flex;
+                                color: $white;
+                                padding: 10px 10px 5px 40px;
+                                justify-content: flex-start;
+                                text-decoration: none;
+                                transition: color 0.2s ease, background-color 0.2s ease, padding-left 0.2s ease;
+                                overflow: hidden;
+                            }
+
+                            & a.clicked {
+                                padding-left: 2px;
+                                color: $primary;
+                            }
+
+                            & a:hover {
+                                color: $primary;
+                                // padding-left: 2px;
+                            }
+                        }
+                    }
+                }
+
+                .card-right {
+                    display: inline-flex;
+                    padding: 0rem;
+                    // border: 1px solid green;
+
+                    &__btn--share {
+                        // border: 1px solid crimson;
+                        margin-right: 60px;
+
+                        .btn {
+                            display: flex;
+                            justify-content: center;
+                            background-color: $primary;
+                            text-align: center;
+                            border-radius: 10px;
+                            cursor: pointer;
+                            padding: .3rem 1.4rem .3rem 1.4rem;
+                            
+                            span {
+                                font-size: .7rem;
+                                color: #181715;
+                                font-weight: 400;
+                                // line-height: .1;
+                            }
+                            
+                            
+                        }
+                    }
+
+                    &__btn--add {
+                        // border: 1px solid chocolate;
+
+                        .btn {
+                            i {
+                                color: $white;
+                            }
+                        }
+
+                        .btn:hover {
+                            padding-top: 1px;
+                        }
+                    }
+
+                    &__avatar {
+                        // border: 1px solid yellow;
+                        &:nth-child(n+2) {
+                           margin: 0;
+                        }
+                    }
+                }
+            }
         }
     }
 }
