--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,7 +32,7 @@ body {
     top: 0;
     width: 100%;
     background-color: #1f1f1e;
-    padding: .4rem;
+    padding: .8rem;
     line-height: 1;
     width: 100%;
     overflow: hidden;
@@ -73,8 +73,8 @@ body {
 
         .nav__img {
             object-fit: cover;
-            height: 22px;
-            width: 22px;
+            height: 1.5rem;
+            width: 1.5rem;
             border: #eeb430 1px solid;
             border-radius: 8px;
             
@@ -84,14 +84,15 @@ body {
 
 .side-menu {
     position: fixed;
-    top: 40px;
+    top: 54px;
     background-color: #252524;
     width: 120px;
     height: 100%;
     // border: 1px solid red;
 
     ul {
-        margin-top: 50px;
+        // margin-top: 80px;
+        // margin-top: 200px;
 
         li {
             display: block;
