--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,7 +105,7 @@ body {
 
             a {
                 color: #fff;
-                font-weight: 500;
+                font-weight: lighter;
                 font-size: .9rem;
             }
 
