Updated font weight

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,7 @@ body {
             line-height: 1;
             cursor: pointer;
             background: #1f1f1e;
+            font-weight: lighter;
             margin-bottom: 2px;
 
 
