--- a/scss/responsive/_desktop_xl.scss
+++ b/scss/responsive/_desktop_xl.scss
@@ -44,6 +44,7 @@
                 padding: .4rem 1.4rem;
 
                 a {
+                    font-weight: lighter;
                     i {
                         display: none;
                     }
