Build project card

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -7,5 +7,6 @@ $dark-light: #bdc3c7;
 $outfit-card-color: #23211F;
 $icon-btn-color-dark: #40403F;
 $icon-btn-color-light: #949494;
+$folder-secondary-color: #1E1E1C;
 $rgbacolor: rgba(255, 255, 255, 0.7);
 $font-stack: 'Roboto';
